Integration maquettes statiques

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="mongodb://localhost/argentBankDB"
+DATABASE_URL="mongodb+srv://Benoit_Marechal:Koenigsbier2!@cluster0.dqbkxwh.mongodb.net/ArgentBank?retryWrites=true&w=majority"
