--- a/argentbank/package.json
+++ b/argentbank/package.json
@@ -3,17 +3,21 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.8.5",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"immer": "^9.0.15",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.4",
 		"react-router-dom": "^6.4.1",
 		"react-scripts": "5.0.1",
+		"redux": "^4.2.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "set PORT=3001 && react-scripts start",
+		"start": "set PORT=3000 && react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
